--- a/crud-week-kampus/_assets/css/simple-sidebar.css
+++ b/crud-week-kampus/_assets/css/simple-sidebar.css
@@ -26,7 +26,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #e0e0e0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -66,12 +66,12 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #263238;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #607d8b;
     background: rgba(255, 255, 255, 0.2);
 }
 
