--- a/crud-week-kampus/hairstyle/css/style.css
+++ b/crud-week-kampus/hairstyle/css/style.css
@@ -459,8 +459,9 @@ body {
 #body .blog {
 	padding: 0;
 }
+/* changed */
 #body .content {
-	float: left;
+	float: right;
 	margin: 0 35px 0 10px;
 	padding: 0;
 	width: 585px;
@@ -483,9 +484,10 @@ body {
 #body .content p a:hover {
 	color: #252525;
 }
+/* changed */
 #body .sidebar {
 	background: url(../images/bg-sidebar.jpg) repeat-y top left;
-	float: right;
+	float: left;
 	margin: 0 10px 82px 0;
 	padding: 0;
 	width: 320px;
@@ -510,7 +512,7 @@ body {
 #body .sidebar ul li {
 	list-style: none;
 	margin: 0;
-	padding: 0 0 24px;
+	padding: 0 0 0px;
 }
 #body .sidebar ul li span {
 	color: #2f394e;
